--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,19 +1,33 @@
 <div class="row">
-	<div class="col-md-12">
+	<%= render 'common/sidebar' %>
+	<div class="col-md-9">
 		<table class="table">
 			<thead>
 				<tr>
 					<th>Name</th>
+					<th>Unread</th>
 					<th>Email</th>
 					<th>Conversation</th>
+					<th>Set</th>
 				</tr>
 			</thead>
 			<tbody>
 				<% @friends.each do |friend| %>
 					<tr>
-						<td><%= friend.name %></td>
+						<td><%= friend.username %></td>
 						<td><%= friend.email %></td>
-						<td><%= link_to 'Conversation' %></td>
+						<td><%= friend.unread(current_user, friend) %></td>
+						<td><%= link_to 'Conversation', 
+										conversations_path(:sender_id => current_user.id, :recipient_id => friend.id), 
+										method: :post, 
+										class: 'btn btn-primary' %>							
+						</td>
+						<td><%= link_to 'delete', 
+										friendship_path(friend), 
+										method: :delete, 
+										class: "btn btn-default", 
+										data: {confirm: "Delete this Friend?"} %>
+						</td>
 					</tr>
 				<% end %>
 			</tbody>
