--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-  
+
 	<nav class="navbar navbar-inverse">
 		<div class="container">
 			<div class="navbar-header">
@@ -18,6 +18,8 @@
 			<ul class="nav navbar-nav">
 				<% if user_signed_in? %>
 				<li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+				<li><a>Hi, <%= current_user.username %>!!</a></li>
+ 		        <li><%= link_to 'Friends', friendships_path %></li>
 				<li><%= link_to 'Users', users_path %></li>
 				<li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
 				<% else %>
